# structex

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  crates.js  help.html  justfile  search-index.js  settings.html  src-files.js  typos.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  rust.yml
examples/: README.md  example.rs  fancy_impl_blocks.rs  result_fns.rs  templated_printing.rs
examples/ad_regex/: Cargo.toml  README.md
examples/sgrep/: Cargo.toml  README.md
examples/ssed/: Cargo.toml  README.md
search.desc/structex/: structex-desc-0-.js
search.index/: 02a5366b56c1.js  072f8b1dadc5.js  07c95ef76140.js  09c76471d920.js  10e4d138a318.js  11ba63591815.js  12bca7ae4241.js  12ebb248a1d7.js  13515ec99a63.js  136e624ee099.js  139cca144231.js  1421b444bd7c.js  142f70c8e9e1.js  15cdb7b13c74.js  166796c14881.js  18fb2e941f6b.js  1905e4ede798.js  190dfe095379.js  1a1984ef2a05.js  1a559702e566.js  1ad4a0e536ea.js  1b09d223ec98.js  1bc9c07201b3.js  1cd3f6c3a747.js  1ef13604bc5e.js  1f2b1c29a29e.js  2120254e0a6b.js  21f30db8390a.js  2276072c4f74.js  240fb4014acf.js  24e3649f5686.js  27a100ea6cd6.js  27c61d65ac3d.js  2aea3896176b.js  2b8069d86c4c.js  2ca5291643d4.js  2e1a7e61b0c9.js  3088c11efd12.js  309ef66d2996.js  310ad34c9740.js  (+53 more)
search.index/crateNames/: 1821589f4248.js
search.index/desc/: 0843cd5249b4.js  16de62acddf3.js  2faf22bbf2bd.js  39339b7c574b.js  a01041b64e14.js  cff854662d7c.js  e6ea8b5b7c2e.js
search.index/entry/: 0607f98da115.js  0f38a5199d4c.js  2b0244e11f4b.js  478b63b2ac9a.js  73307e9d859e.js  77adfc100267.js  7f7cb0f70dd1.js  87bdb597773b.js  8cb712dc9ba9.js  d3c9b2e61997.js
search.index/function/: 13bcb43e71cb.js  3259b7041fab.js  4ad8f1be25f0.js  6a9f77f9493f.js  8ae2bce60c02.js  8b2cab0ded37.js  a75dd52001fc.js  b816b6ef9258.js  b88fffe2e0ac.js  e4aa206f7367.js  fbb4dacaa56c.js
search.index/generic_inverted_index/: 09d2e51af289.js  (+10 more)
src/: ast.rs  compile.rs  lib.rs  parse.rs  re.rs  template.rs
structex/: all.html  enum.Error.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Action.html  struct.Structex.html  struct.StructexBuilder.html  struct.TaggedCaptures.html  struct.TaggedCapturesIter.html  type.ParseError.html
tests/: suite.rs
(+112 files in other folders)
