[package]
name = "structex"
version = "0.1.0"
edition = "2024"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/structex"
documentation = "https://docs.rs/structex"
readme = "README.md"
description = "A structural regular expression engine"

[features]
default = ["regex"]
regex = ["dep:regex"]

[dependencies]
regex = { version = "1", optional = true }

[dev-dependencies]
handlebars = "6.3.2"
simple_test_case = "1.3.0"
