[package]
name = "structex"
version = "0.1.2"
edition = "2024"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/structex"
documentation = "https://docs.rs/structex"
readme = "README.md"
description = "A structural regular expression engine"

[features]
default = ["regex"]
regex = ["dep:regex"]
integration_test = []

[dependencies]
regex = { version = "1", optional = true }

[dev-dependencies]
structex = { path = ".", features = ["integration_test"] }
simple_test_case = "1.3.0"
simple_txtar = "1.1.0"
tinytemplate = "1.2.1"
