[package]
name = "structex"
version = "0.2.0"
edition = "2024"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/structex"
documentation = "https://docs.rs/structex"
readme = "README.md"
description = "A structural regular expression engine"

[features]
default = ["regex"]
regex = ["dep:regex"]
integration_test = []

[dependencies]
regex = { version = "1", optional = true }

[dev-dependencies]
# This looks a little odd, but what we're doing here is enabling the
# integration_test feature automatically when we build for tests in
# order to conditionally generate the test data needed for running
# the integration test suite. If we _always_ generate the data for
# the tests then 'cargo publish' is unhappy that build.rs is writing
# files outside of OUT_DIR. If we write to OUT_DIR, we don't have a
# fixed path to the files to provide as a &'static str in the test
# suite.
structex = { path = ".", features = ["integration_test"] }
simple_test_case = "1.3.0"
simple_txtar = "1.1.0"
tinytemplate = "1.2.1"
